<resources>
    <string name="need_permission">需要添加使用情况查询权限</string>
    <string name="app_name">XX助手单机版</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="tips_need_root">请先获取root权限</string>
    <string name="background_service">XX助手</string>
    <string name="background_service_content">后台服务开启</string>
    <string name="background_service_script">脚本执行</string>
    <string name="background_service_listen">监听</string>
    <string name="background_service_script_content">XX助手脚本执行中</string>
    <string name="tips_install_err">安装失败</string>
    <string name="left_global_change">全局修改</string>
    <string name="left_change_density">修改密度</string>
    <string name="left_open_app">一键操作后打开应用</string>
    <string name="left_uninstall_app">操作后卸载应用</string>
    <string name="left_net_debug">联网控制</string>
    <string name="left_continuous">连续模式</string>
    <string name="left_total_count_limit">总次数限制</string>
    <string name="left_market">MARKET</string>
    <string name="left_new_param">一键生成数据</string>
    <string name="left_check_new_version">检查更新</string>
    <string name="left_install_manual">手动安装</string>
    <string name="left_change_down_url">修改下载地址IP</string>
    <string name="left_change_task_url">修改任务IP</string>
    <string name="left_open_chagne_input">修改输入法</string>
    <string name="left_open_auto_start">设置自启动权限</string>
    <string name="left_open_xposed_installer">打开Xposed</string>
    <string name="left_open_uninstaller">卸载应用</string>
    <string name="left_logout">注销登录</string>
    <string name="left_reconnect_net">重连网络</string>
    <string name="left_version_no_change">当前为最新版本</string>
    <string name="left_get_version_err">获取版本号失败，请稍后再试</string>
    <string name="left_version_updating">更新版本：%s</string>
    <string name="left_version_down_ok">下载完成</string>
    <string name="left_version_down_err">下载失败</string>
    <string name="left_local_exist">本地SD卡存在该版本的Apk</string>
    <string name="left_user_local">使用本地文件</string>
    <string name="left_download_new">重新下载</string>
    <string name="left_btn_liucun">留存设置</string>
    <string name="left_btn_vpn_set">VPN设置</string>
    <string name="left_btn_change_white_list">参数修改白名单</string>
    <string name="left_btn_set_script">脚本设置</string>
    <string name="left_btn_listen_file_opt">监听文件操作</string>
    <string name="left_btn_listen_sys_opt">监听系统值操作</string>
    <string name="left_btn_wifi_sim">wifi及Sim卡设置</string>
    <string name="left_file_not_exist">安装包不存在</string>
    <string name="contacts_change">修改通讯录等</string>
    <string name="left_save_offline_param">保存新增数据到数据库</string>
     <string name="left_permisssion">有权限查看使用情况</string>
    <string name="delete">删除</string>
    <string name="delete_log_set_deadine">设置过期时间</string>
    <string name="delete_log_clear_all_log">清除所有LOG信息</string>
    <string name="delete_log_clear_all_script">清除所有Script信息</string>
    <string name="delete_log_clear_all_apk">清除所有Apk信息</string>
    <string name="delete_log_clear_all_backup_apk">清除所有BackupApk信息</string>
    <string name="delete_log_clear_deadline_log">清除过期LOG信息</string>
     <string name="delete_log_clear_deadline_script">清除过期Script信息</string>
    <string name="delete_log_clear_deadline_apk">清除过期Apk信息</string>
     <string name="delete_log_clear_deadline_backup_apk">清除过期BackupApk信息</string>
    <string name="delete_log_tips_deadline_time">当前过期时间为%d 天</string>
    <string name="tips_no_data">暂无数据</string>
    <string name="title_listen_file_opt">监听应用文件操作</string>
    <string name="title_listen_sys_opt">监听系统值设置</string>
    <string name="sys_format">方法：%1$s \n 参数：%2$s \n 返回值：%3$s</string>
    <string name="tips_delete_ok_err">删除文件成功%1$d 条，失败%2$d 条</string>
    <string name="tips_no_use">该应用无效</string>
    <string name="clear_cur_listener">清除当前监听应用</string>
    <string name="set_cur_channel">当前渠道号是：【%s】,点击修改</string>
    <string name="change_cur_channel">修改当前渠道号</string>
    <string name="title_wait">等待中</string>
    <string name="btn_easy_click">一键操作</string>
    <string name="btn_listen_apk">选择监听应用</string>
    <string name="btn_show_params">长按显示本机参数信息</string>
    <string name="btn_hide_params">长按隐藏本机参数信息</string>
    <string name="btn_change_white_list">参数修改白名单</string>
    <string name="btn_unInstall_apks">卸载辅助</string>
    <string name="btn_open_webview">打开网页</string>
    <string name="main_btn_set_script">脚本设置</string>
    <string name="main_btn_set_script_test">脚本test</string>
    <string name="btn_listen_file_opt">监听文件操作</string>
    <string name="btn_listen_sys_opt">监听系统值操作</string>
    <string name="main_btn_wifi_sim">wifi及Sim卡设置</string>
    <string name="main_btn_show_debug_log">显示错误Log</string>
    <string name="main_btn_installed_log">静默安装应用包名</string>
    <string name="main_btn_chose_market">选择应用市场</string>
    <string name="main_btn_show_upload_log">显示上传错误Log</string>
    <string name="main_btn_delete_log">清空log信息及xx文件</string>
    <string name="auto_recover_sys_ing">系统值恢复...</string>
    <string name="auto_recover_sys_ok">恢复成功</string>
    <string name="auto_recover_sys_count">恢复数量%d个</string>
    <string name="auto_recover_sys_err_count">恢复失败%d个</string>
    <string name="no_need_to_reListen">该应用正在监听，无需再次选择</string>
    <string name="please_affirm_listen_app">请确认要监听的应用</string>
    <string name="cancel">取消</string>
    <string name="check_all">全选</string>
    <string name="please_affirm_clear_listen_app">请确认取消监听应用</string>
    <string name="affirm">确认</string>
    <string name="opera_fail">操作失败</string>
    <string name="btn_silent_install">静默安装</string>
    <string name="title_installing">安装中</string>
    <string name="btn_liucun">留存设置</string>
    <string name="btn_vpn_set">VPN设置</string>
     <string name="btn_wjvpn_set">VPN设置</string>
    <string name="cb_global_hook">全局修改</string>
    <string name="btn_global_hide">全局修改白名单</string>
    <string name="btn_close_white_list">关闭应用白名单</string>
    <string name="btn_add_global_hide">选择添加白名单</string>
    <string name="param_ok">参数生成成功</string>
    <string name="tv_liucun_title">设置留存率(%)</string>
    <string name="tv_liucun_1">次日留存</string>
    <string name="tv_liucun_2">三日留存</string>
    <string name="tv_liucun_3">四日留存</string>
    <string name="tv_liucun_4">五日留存</string>
    <string name="tv_liucun_5">六日留存</string>
    <string name="tv_liucun_6">七日留存</string>
    <string name="tv_liucun_7">双周留存</string>
    <string name="tv_liucun_8">三周留存</string>
    <string name="tv_liucun_9">四周留存</string>
    <string name="btn_cancel">取消</string>
    <string name="btn_ok">确定</string>
    <string name="btn_liucun_export">一键导出</string>
    <string name="btn_liucun_remove">清除此包留存</string>
    <string name="btn_liucun_remove_tips">此操作会清除\"%s\"包的本地所有新增数据与留存数据</string>
    <string name="btn_liucun_remove_all">一键清空</string>
    <string name="liucun_btn_set_total_count">设置执行总次数</string>
    <string name="btn_liucun_remove_all_tips">此操作会清空所有包的留存数据与设置</string>
    <string name="tv_all_data_num">已跑数据(条)：</string>
    <string name="tv_liucun_data_run_num">已跑留存数据(条):</string>
    <string name="tv_liucun_data_remain">剩余留存数据(条):</string>
    <string name="tv_liucun_total_data">任务总次数</string>
    <string name="et_not_null_or_100">请输入大于0且小于100的小数或整数</string>
    <string name="et_not_null">此值不能为空</string>
    <string name="et_must_less_than_100">此值必须在0到100之间</string>
    <string name="liucun_set_ok">留存设置成功</string>
    <string name="liucun_set_err">留存设置失败</string>
    <string name="no_liucun_set">当前未设置留存信息</string>
    <string name="liucun_set_ed">已设置的包:</string>
    <string name="liucun_set_un">当前监听的包:</string>
    <string name="title_liucun_set">留存设置</string>
    <string name="title_main">XX 助手 单机版</string>
    <string name="title_main_offline">XX 助手 单机版</string>
    <string name="title_main_pc">XX 助手 PC</string>
    <string name="title_main_uploading">数据上传中</string>
    <string name="title_main_diconnect_vpn">断开VPN</string>
    <string name="title_other_set">更多设置</string>
    <string name="title_err_log">失败日志</string>
    <string name="title_upload_err_log">上传信息日志</string>
    <string name="main_xposed_nouse">软件不起作用，检查Xposed</string>
    <string name="main_no_root">软件不起作用，检查Root</string>
    <string name="main_no_use">软件不起作用</string>
    <string name="main_no_listen_apk">请先设置监听应用</string>
    <string name="main_no_continue">不连续执行</string>
    <string name="main_auto_running">正在执行中</string>
    <string name="main_auto_running_finish">任务执行结束</string>
    <string name="main_task_over">任务执行结束</string>
    <string name="main_logout">设备身份验证出现问题</string>
    <string name="liucun_dialog_set_total_title">设置任务总次数</string>
    <string name="liucun_dialog_btn_ok">确定</string>
    <string name="liucun_dialog_btn_cancel">取消</string>
    <string name="liucun_tip_total_count_not_null">执行总次数不能为空</string>
    <string name="liucun_tip_total_count_set_ok">设置成功</string>
    <string name="liucun_tip_total_count_set_err">设置失败</string>
    <string name="main_script_finish">脚本执行完成</string>
    <string name="main_script_err">脚本不存在</string>
    <string name="main_script_run_err">脚本执行失败</string>
    <string name="auto_get_retain_param_err">获取留存数据失败,查看是否已跑完所有留存数据</string>
    <string name="auto_change_contast_err">修改联系人失败</string>
    <string name="auto_close_apk">关闭应用</string>
    <string name="auto_generate_id_param">生成指定ID：%d参数</string>
    <string name="auto_generate_id_param_err">生成指定ID：%d参数失败，请查看参数是否存在</string>
    <string name="auto_clear_apk_data">清除应用数据</string>
    <string name="auto_recover_sys_value">恢复系统值</string>
    <string name="auto_uninstall_all_apks">卸载操作中安装的应用</string>
    <string name="auto_delete_accounts">清除系统账户</string>
    <string name="auto_uninstall_apk">卸载安装应用</string>
    <string name="auto_disconnect_vpn">断开VPN</string>
    <string name="auto_upload_data">数据上传</string>
    <string name="auto_install_apk">安装应用</string>
    <string name="auto_delete_file">删除文件</string>
    <string name="auto_connect_vpn">连接VPN</string>
    <string name="auto_param_generation">生成数据</string>
    <string name="auto_param_generation_ing">参数随机...</string>
    <string name="auto_close_apk_ing">关闭应用...</string>
    <string name="auto_clear_apk_data_ing">清除数据...</string>
    <string name="auto_clear_apk_data_size">数据大小 %.2f KB</string>
    <string name="auto_uninstall_apk_ing">卸载安装包...</string>
    <string name="auto_delete_file_ing">正在删除文件</string>
    <string name="auto_delete_file_ok">删除文件成功</string>
    <string name="auto_delete_file_err_count">删除%1$d文件失败</string>
    <string name="auto_delete_folder_ing">正在删除文件夹</string>
    <string name="auto_delete_folder_ok">删除文件夹成功</string>
    <string name="auto_delete_folder_err_count">删除%1$d文件夹失败</string>
    <string name="auto_tip_downLoad_err">下载失败,网络出错</string>
    <string name="auto_tip_script_downLoad_err">脚本下载失败,网络出错</string>
    <string name="auto_downLoad_title_apk">下载应用</string>
    <string name="auto_downLoad_title_script">下载脚本</string>
    <string name="auto_downLoad_message">正在下载请稍后...</string>
    <string name="auto_vpn_connect_err">VPN连接失败</string>
    <string name="auto_vpn_connect_ok">VPN连接成功</string>
    <string name="auto_no_apk_can_use">应用未安装，并且没有合适的安装包</string>
    <string name="wifi_tv_wifi_set">wifi占比: %d %%</string>
    <string name="wifi_tv_sim_set">有SIM占比: %d %%</string>
    <string name="wifi_sim_tips">注意：只有在WiFi情况下存在无SIM卡的状态\n   (WiFi为0时sim卡设置无效)</string>
    <string name="market_listen_package_name">下载应用包名：</string>
    <string name="market_ok">确定</string>
    <string name="choose_market">选择应用市场:</string>
 	<string name="market_baidu">百度手机助手</string>
 	<string name="market_360">360手机助手</string>
 	<string name="market_yyb">应用宝</string>
 	<string name="market_wdj">豌豆荚</string>
 	<string name="market_pp_assistant">PP助手</string>
 	<string name="market_anzhi">安智市场</string>
 	<string name="market_miu">小米应用商店</string>
 	<string name="market_gp">Google Play 商店</string>
 	<string name="market_is_run_market">执行应用市场下载</string>
</resources>