<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <include
        android:id="@+id/common_actionbar"
        layout="@layout/common_bar" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="5dp"
        android:orientation="vertical" >

        <TextView
            android:id="@+id/tv_dead_line"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="left"
            android:padding="5dp"
            android:text="@string/delete_log_tips_deadline_time"
            android:textSize="@dimen/text_size_big" />

        <Button
            android:id="@+id/btn_set_deadline_time"
            style="@style/btn_style0"
            android:text="@string/delete_log_set_deadine" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal" >

            <Button
                android:id="@+id/btn_clear_all_log"
                style="@style/btn_style1"
                android:text="@string/delete_log_clear_all_log" />

            <Button
                android:id="@+id/btn_clear_deadline_log"
                style="@style/btn_style1"
                android:text="@string/delete_log_clear_deadline_log" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal" >

            <Button
                android:id="@+id/btn_clear_all_script"
                style="@style/btn_style1"
                android:text="@string/delete_log_clear_all_script" />

            <Button
                android:id="@+id/btn_clear_deadline_script"
                style="@style/btn_style1"
                android:text="@string/delete_log_clear_deadline_script" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal" >

            <Button
                android:id="@+id/btn_clear_all_apk"
                style="@style/btn_style1"
                android:text="@string/delete_log_clear_all_apk" />

            <Button
                android:id="@+id/btn_clear_deadline_apk"
                style="@style/btn_style1"
                android:text="@string/delete_log_clear_deadline_apk" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal" >

            <Button
                android:id="@+id/btn_clear_all_backapk"
                style="@style/btn_style1"
                android:text="@string/delete_log_clear_all_backup_apk" />

            <Button
                android:id="@+id/btn_clear_deadline_backup"
                style="@style/btn_style1"
                android:text="@string/delete_log_clear_deadline_backup_apk" />
        </LinearLayout>
    </LinearLayout>

</LinearLayout>