<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#ffffff"
    android:orientation="vertical"
    android:padding="20dp" >

    <LinearLayout
        android:id="@+id/liucun_panel"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#ffeeeeee"
        android:orientation="vertical" >

        <TextView
            android:id="@+id/tv_setliucun_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:textSize="@dimen/text_size"
            android:text="@string/tv_liucun_title" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal" >

            <LinearLayout style="@style/linear_weight_1_vertical" >

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal" >

                    <TextView
                        style="@style/tv_weight_1"
                        android:text="@string/tv_liucun_1" />

                    <EditText
                        style="@style/tv_weight_1"
                        android:hint="20%" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal" >

                    <TextView
                        style="@style/tv_weight_1"
                        android:text="@string/tv_liucun_2" />

                    <EditText
                        style="@style/tv_weight_1"
                        android:hint="20%" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal" >

                    <TextView
                        style="@style/tv_weight_1"
                        android:text="@string/tv_liucun_3" />

                    <EditText
                        style="@style/tv_weight_1"
                        android:hint="20%" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal" >

                    <TextView
                        style="@style/tv_weight_1"
                        android:text="@string/tv_liucun_4" />

                    <EditText
                        style="@style/tv_weight_1"
                        android:hint="20%" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal" >

                    <TextView
                        style="@style/tv_weight_1"
                        android:text="@string/tv_liucun_5" />

                    <EditText
                        style="@style/tv_weight_1"
                        android:hint="20%" />
                </LinearLayout>
            </LinearLayout>

            <LinearLayout style="@style/linear_weight_1_vertical" >

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal" >

                    <TextView
                        style="@style/tv_weight_1"
                        android:text="@string/tv_liucun_6" />

                    <EditText
                        style="@style/tv_weight_1"
                        android:hint="20%" />
                </LinearLayout>
                 <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal" >

                    <TextView
                        style="@style/tv_weight_1"
                        android:text="@string/tv_liucun_7" />

                    <EditText
                        style="@style/tv_weight_1"
                        android:hint="20%" />
                </LinearLayout>
                 <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal" >

                    <TextView
                        style="@style/tv_weight_1"
                        android:text="@string/tv_liucun_8" />

                    <EditText
                        style="@style/tv_weight_1"
                        android:hint="20%" />
                </LinearLayout>
                 <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal" >

                    <TextView
                        style="@style/tv_weight_1"
                        android:text="@string/tv_liucun_9" />

                    <EditText
                        style="@style/tv_weight_1"
                        android:hint="20%" />
                </LinearLayout>
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>
</LinearLayout>