<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.donson.myhook.MainActivity" >

    <include
        android:id="@+id/common_actionbar"
        layout="@layout/common_bar" />

    <include
        android:id="@+id/listen_layout"
        layout="@layout/listen_layout"
        android:visibility="gone" />

    <ScrollView
        android:id="@+id/sv_operation"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/listen_layout"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        android:scrollbars="none" >

        <LinearLayout
            android:id="@+id/listen_LLayout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical" >

            <Button
                android:id="@+id/btn_listen_apk"
                style="@style/btn_style0"
                android:text="@string/btn_listen_apk" />

            <Button
                android:id="@+id/btn_easyClick"
                style="@style/btn_style0"
                android:text="@string/btn_easy_click" />
            <TextView
                android:id="@+id/main_tv_xposed_is_used"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:padding="@dimen/tv_big_padding"
                android:textColor="@color/red"
                android:textSize="@dimen/text_size_big"
                android:visibility="gone" />

            <TextView
                android:id="@+id/tv_tips"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/hello_world"
                android:visibility="gone" />
             <Button
                android:id="@+id/btn_open"
                style="@style/btn_style0"
                android:text="@string/btn_show_params" />
            <com.donson.widget.MyListView
                android:id="@+id/param_list"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:focusable="false" 
                android:visibility="gone">
            </com.donson.widget.MyListView>
        </LinearLayout>
    </ScrollView>

</RelativeLayout>